#279, integrate minimize window to tray function

--- a/Ninjacrab.PersistentWindows.Solution/Common/Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Common/Common.csproj
@@ -59,6 +59,7 @@
     <Compile Include="LayoutProfile.Designer.cs">
       <DependentUpon>LayoutProfile.cs</DependentUpon>
     </Compile>
+    <Compile Include="MinimizeToNotify.cs" />
     <Compile Include="Models\ApplicationDisplayMetrics.cs" />
     <Compile Include="Models\DesktopDisplayMetrics.cs" />
     <Compile Include="NameDbKey.cs">
