--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/App.config
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/App.config
@@ -6,4 +6,7 @@
 	<System.Windows.Forms.ApplicationConfigurationSection>
 		<add key="DpiAwareness" value="PerMonitorV2" />
 	</System.Windows.Forms.ApplicationConfigurationSection>
+  <appSettings>
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+  </appSettings>
 </configuration>
