--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/App.config
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
 	<System.Windows.Forms.ApplicationConfigurationSection>
-		<add key="DpiAwareness" value="PerMonitorV2" />
+		<!--<add key="DpiAwareness" value="PerMonitorV2" />-->
 	</System.Windows.Forms.ApplicationConfigurationSection>
   <appSettings>
-    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+    <!--<add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />-->
   </appSettings>
 </configuration>
