Arranged and anchored the controls of Layout selection window
When resizing the window the controls make use of the available space now.
Also added a cancel button and set the OkButton and CancelButton properties so
that this dialog can be quit using the keyboard (by pressing Enter/Return or
Escape key).

--- a/Ninjacrab.PersistentWindows.Solution/Common/Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Common/Common.csproj
@@ -94,6 +94,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="DbKeySelect.resx">
+      <DependentUpon>DbKeySelect.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LaunchProcess.resx">
       <DependentUpon>LaunchProcess.cs</DependentUpon>
     </EmbeddedResource>
